--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.gemini/*
+.vscode/*
+
 # Miscellaneous
 *.class
 *.log
@@ -26,7 +29,7 @@ migrate_working_dir/
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
-.dart_tool/
+.dart_tool/*
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
