--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   provider: ^6.1.5+1
   firebase_ui_auth: ^3.0.0
+  go_router: ^16.2.0
 
 dev_dependencies:
   flutter_test:
