--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,19 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+
+  # Firebase
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
-  provider: ^6.1.5+1
-  firebase_ui_auth: ^3.0.0
+  firebase_storage: ^13.0.0   # opsiyonel
+  google_fonts: ^6.2.1
+  image_picker: ^1.1.2
+  flutter_map: ^8.2.1
+  latlong2: ^0.9.0
+  geocoding: ^2.1.1
+
+  # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
 
 dev_dependencies:
