test pre release 28.08.2025

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ lib/firebase_options.dart
 android/app/upload-keystore.jks
 build/app/outputs/bundle/release/app-release.aab
 android/key.properties
+android/build.gradle.kts
+android/app/build.gradle.kts
 
 # IntelliJ related
 *.iml
