--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,31 @@
 name: unistay
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.1.1+3
+
+#  X (Major) → gros changements, rupture de compatibilité
+#
+#Exemple : passage de Flutter 2 à Flutter 3
+#
+#  1.0.0 → 2.0.0
+#
+#  Y (Minor) → nouvelles fonctionnalités sans casser l’existant
+#
+#Exemple : ajout d’un nouveau module, d’une nouvelle page
+#
+#  1.0.0 → 1.1.0
+#
+#  Z (Patch) → corrections mineures, petits correctifs
+#
+#Exemple : correction d’un bug, ajustement UI
+#
+#  1.0.0 → 1.0.1
+
+#version: 1.0.0+1   # Première release
+#version: 1.0.1+2   # Bugfix
+#version: 1.1.0+3   # Nouvelles fonctionnalités
+#version: 2.0.0+4   # Gros changement majeur
+
 
 environment:
   sdk: ">=3.4.0 <4.0.0"   # Flutter 3.24 serisi ile uyumlu
