--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   flutter_map: ^8.2.1
   latlong2: ^0.9.0
   geocoding: ^2.1.1
+  table_calendar: ^3.0.9
+  http: ^1.1.0
 
   # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
