--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   firebase_core: ^4.0.0
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
-  firebase_storage: ^13.0.0   # opsiyonel
+  firebase_storage: ^13.0.0  
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
   flutter_map: ^8.2.1
