--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  nominatim_flutter: ^0.0.8
 
   # Firebase
   firebase_core: ^4.0.0
@@ -57,3 +58,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/PointExploitation.csv
