--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   geocoding: ^2.1.1
   table_calendar: ^3.0.9
   http: ^1.1.0
+  url_launcher: ^6.2.2
 
   # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
