--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,14 @@ dependencies:
   firebase_storage: ^13.0.0  
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
+  image: ^4.1.3
   flutter_map: ^8.2.1
   latlong2: ^0.9.0
   geocoding: ^2.1.1
   table_calendar: ^3.0.9
   http: ^1.1.0
   url_launcher: ^6.2.2
+  provider: ^6.0.0
 
   # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
