--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^1.1.0
   url_launcher: ^6.2.2
   provider: ^6.0.0
+  flutter_image_compress: ^2.0.4
 
   # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
