--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: unistay
 description: "A new Flutter project."
 publish_to: 'none'
-version: 1.0.0+1
+version: 1.1.1+3
 
 environment:
   sdk: ">=3.4.0 <4.0.0"   # Flutter 3.24 serisi ile uyumlu
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  nominatim_flutter: ^0.0.8 # Replace with the latest version
+  tflite_flutter: ^0.11.0
 
   # Firebase
   firebase_core: ^4.0.0
