--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,3 +47,4 @@ flutter:
   assets:
     - assets/ss2_unistay_price.tflite
     - assets/PointExploitation.csv
+    - assets/synthetic_valais_price.csv
