update gitignore and creation of user guide

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ lib/firebase_options.dart
 
 android/build.gradle.kts
 android/app/build.gradle.kts
+android/app/proguard-rules.pro
 
 # IntelliJ related
 *.iml
