--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # Routing (main.dart ve LoginPage'te kullanılıyor)
   go_router: ^16.2.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
